# vab-rt-import-script

./: .env.example  .gitignore  README.md  auth.json  generate_api.sh  pyproject.toml
notebooks/analysis/: Data_Cleaning.ipynb  Subscription_Data_Analysis.ipynb  data_cleaning.ipynb
notebooks/process/: Address_Data.ipynb  Doc_Data.ipynb  Fiscal_Data.ipynb  Internal_Data.ipynb  Subscription_Data.ipynb
vab_rt_import/: pipeline.py  settings.py  source.py
vab_rt_import/importing/: fetch_initial.py  fiscal.py  subscription_data.py
vab_rt_import/importing/utils/: auth.py  geo_map.py  ids.py
vab_rt_import/importing/vab_rt_api_client/: __init__.py
vab_rt_import/importing/vab_rt_api_client/models/: __init__.py  abilitazione.py  auth_user.py  birth_country_enum.py  cap.py  change_password.py  company.py  comune.py  contract_type_enum.py  education_type_enum.py  gender_enum.py  geographic_partition_enum.py  import_member_response.py  import_member_response_map.py  import_subscription_response.py  member.py  member_abilitazione.py  member_abilitazione_source_enum.py  member_address.py  member_cie_document.py  member_driver_license_category.py  member_driver_license_document.py  member_education.py  member_email.py  member_job.py  (+54 more)
vab_rt_import/process/: address.py  docs.py  fiscal.py  process_address.py  process_docs.py  process_fiscal.py  process_subscription.py  subscription.py
vab_rt_import/utils/: fiscal_clean.py  fiscal_countries.py  n_tessera_filler.py  nomi_italiani.py  places_infer.py  utils.py
vab_rt_import/utils/data/: fiscal_countries.json  italian_names.txt
(+107 files in other folders)
