[project]
name = "vab-rt-import-scripts"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.13"
dependencies = [
    "comuniitaliani>=0.21.0",
    "gender-guesser>=0.4.0",
    "geonamescache>=3.0.0",
    "geopy>=2.4.1",
    "jupyter>=1.1.1",
    "jupyterlab>=4.5.5",
    "levenshtein>=0.27.3",
    "matplotlib>=3.10.8",
    "openapi-python-client>=0.28.2",
    "openpyxl>=3.1.5",
    "pandas>=3.0.1",
    "pyarrow>=23.0.1",
    "pycountry>=26.2.16",
    "pymysql>=1.1.2",
    "python-codicefiscale>=0.11.3",
    "python-dotenv>=1.2.2",
    "rapidfuzz>=3.14.3",
    "sqlalchemy>=2.0.47",
]
